--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,6 +2,7 @@
     height: 100vh;
     width: 100vw;
     display: flex;
+   
 }
 
 /* SideBar ölçeklendirme */
@@ -9,8 +10,10 @@
     max-width: 15vw;
     height: 100vh;
     background-color: black;
+    
     overflow: hidden; /* İçeriğin taşmasını önlemek için */
 }
+
 /*Sidebar içerik düzenlemöe */
 .sidebarContent{
     height: 100%;
@@ -48,15 +51,13 @@
     margin-top: 2rem;
 }
 
-
-
-
-
-
 .content{
+    display: flex;
+    flex-direction: column;
     width: 100vw;
     height: 100vh;
     background-color: aqua;
+
 }
 .navbar{
     height: 10vh;
@@ -67,6 +68,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
+    
 }
 .navbar a{
     text-decoration: none;
@@ -80,12 +83,20 @@
     font-weight: bold;
 }
 
-.navbar .myButton{
-    margin-left: 2rem;
-    border: 5px solid green;
-    border-radius: 50%;
-}
 
+.leftSide{
+    margin-left: 2rem;
+    align-items: center;
+    display: flex;
+}
+svg{
+    font-size: 1.5rem;
+    stroke-width: 2
+    
+}
+.leftSide .myButton{
+    margin-left: 2rem;
+}
 .rightside{
     margin-right: 2rem;
 }
@@ -95,3 +106,5 @@
 }
 
   
+
+
