--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -6,12 +6,15 @@
 }
 
 /* SideBar ölçeklendirme */
-.sidebar{
+.sidebarr{
     max-width: 15vw;
     height: 100vh;
     background-color: black;
-    
+    font-size:0.9rem;
     overflow: hidden; /* İçeriğin taşmasını önlemek için */
+}
+.sidebarContent p{
+    margin: 0;
 }
 
 /*Sidebar içerik düzenlemöe */
@@ -21,6 +24,16 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+.sidebarContent ul{
+    margin: 0;
+    padding: 0;
+}
+.sidebarContent ul li{
+    list-style: none;
+}
+p{
+    margin:0 !important ;
 }
 
 /* SideBar a etiketleri görüntüsü*/
@@ -72,15 +85,15 @@
     
 }
 .navbar a{
-    text-decoration: none;
-    color: white;
-    font-size: 1.2rem;
+    text-decoration: none ;
+    color: white ;
+    font-size: 1.1rem ;
 }
 .navbar a.active{
-    transition: 1s color;
-    color:black;
-    font-size: 1.4rem;
-    font-weight: bold;
+    transition: 1s color ;
+    color:black ;
+    font-size: 1.3rem ;
+    font-weight: bold ;
 }
 
 
