--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -7,8 +7,8 @@
 
 /* SideBar ölçeklendirme */
 .sidebarr{
+    height: 100%;
     max-width: 15vw;
-    height: 100vh;
     background-color: black;
     font-size:0.9rem;
     overflow: hidden; /* İçeriğin taşmasını önlemek için */
@@ -69,8 +69,6 @@ p{
     flex-direction: column;
     width: 100vw;
     height: 100vh;
-    background-color: aqua;
-
 }
 .navbar{
     height: 10vh;
@@ -81,8 +79,6 @@ p{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
-    
 }
 .navbar a{
     text-decoration: none ;
@@ -95,8 +91,6 @@ p{
     font-size: 1.3rem ;
     font-weight: bold ;
 }
-
-
 .leftSide{
     margin-left: 2rem;
     align-items: center;
@@ -117,7 +111,13 @@ svg{
     margin-right: 2rem;
     padding: 0 30px ;
 }
+.ProductsDiv{
+    display: flex;
+    justify-content: center;
+   flex-wrap: wrap;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 
-  
-
+}
 
