--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -1,5 +1,5 @@
 .mainPage{
-    height: 100vh;
+    height: 150vh;
     /*height:140vh yapınca düzeliyor*/
     width: 100vw;
     display: flex;
@@ -10,7 +10,7 @@
     height: 100%;
     max-width: 15vw;
     background-color: black;
-    font-size:0.9rem;
+    font-size:1rem;
     overflow: hidden; /* İçeriğin taşmasını önlemek için */
 }
 .sidebarContent p{
@@ -21,7 +21,7 @@
 .sidebarContent{
     height: 100%;
     display: flex;
-    justify-content: center;
+    justify-content:center;
     align-items: center;
     flex-direction: column;
 }
@@ -68,7 +68,7 @@ p{
     display: flex;
     flex-direction: column;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
 }
 .navbar{
     height: 7vh;
@@ -125,7 +125,9 @@ svg{
 .slider-carousel{
     width:80%;
     display:block;
-    margin:auto
+    margin:auto;
+    margin-top:1rem;
+    margin-bottom: 1rem;
 }
 .carouselItem-img{
     width:100%;
