--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -104,9 +104,32 @@ svg{
 .leftSide .myButton{
     margin-left: 2rem;
 }
+
 .rightside{
     margin-right: 2rem;
+    display: flex;
+    align-items: center;
+    
 }
+.shopcard{
+    position: relative;
+}
+.shopcard p{
+    border-radius: 50%;
+    width: 1.5rem;
+    text-align: center;
+    position: absolute;
+    right: 35px;
+    bottom: 8px;
+    background-color: aqua;
+
+}
+.iconshop{
+    position: absolute;
+    top: 3px;
+    left: 10px;
+}
+
 .rightside a{
     margin-right: 2rem;
     padding: 0 30px ;
