--- a/src/components/styles/ShoppingCard.css
+++ b/src/components/styles/ShoppingCard.css
@@ -5,9 +5,16 @@
 .summary-card{
     width:20vw;
     height:60vh;
-    background-color:blue;
     margin-right:3rem;
     margin-top:2rem;
+    text-align: center;
+}
+.summary-ul{
+    margin-top: 2rem;
+}
+.summary-li{
+    list-style: none;
+    margin-top: 1rem;
 }
 .accordion-class{
     width:50vw;
